Implementação da leitura e processamento do arquivo xml da nota fiscal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Configuração de diretórios de trabalho
-nfe-process-service.diretorio.input=~/desenv/projetos/nfe/arquivos/input
-nfe-process-service.diretorio.output=~/desenv/projetos/nfe/arquivos/output
-nfe-process-service.diretorio.erro=~/desenv/projetos/nfe/arquivos/erro
+nfe-process-service.diretorio.input=/home/samuel/desenv/projetos/nfe/arquivos/input/
+nfe-process-service.diretorio.output=/home/samuel/desenv/projetos/nfe/arquivos/output/
+nfe-process-service.diretorio.erro=/home/samuel/desenv/projetos/nfe/arquivos/erro/
 
 # Configurações extras
 quarkus.jackson.write-dates-as-timestamps=true
