--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ nfe-process-service.diretorio.erro=/home/samuel/desenv/projetos/nfe/arquivos/err
 # Configurações extras
 quarkus.jackson.write-dates-as-timestamps=true
 quarkus.datasource.devservices.enabled=false
+quarkus.http.port=2000
+quarkus.http.test-port=3001
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:4200
+quarkus.http.cors.origins=http://localhost:2000/api
 quarkus.http.cors.headers=accept, origin, authorization, content-type, x-requested-with
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
