Corrigindo portas e configs do cors e atualizando rest da nota fiscal e da duplicata.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ quarkus.datasource.devservices.enabled=false
 quarkus.http.port=2000
 quarkus.http.test-port=2001
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:2000/api
+quarkus.http.cors.origins=http://localhost:4000
 quarkus.http.cors.headers=accept, origin, authorization, content-type, x-requested-with
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
